--- a/HelloProject/pom.xml
+++ b/HelloProject/pom.xml
@@ -14,7 +14,18 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-  </dependencies>
+  
+  <dependency>
+		<groupId>org.mybatis</groupId>
+		<artifactId>mybatis</artifactId>
+		<version>3.2.3</version>
+	</dependency>
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.31</version>
+		</dependency>
+		</dependencies>
   <build>
     <finalName>HelloProject</finalName>
     <defaultGoal>install</defaultGoal>
