--- a/HelloProject/pom.xml
+++ b/HelloProject/pom.xml
@@ -14,8 +14,7 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-  
-  <dependency>
+    <dependency>
 		<groupId>org.mybatis</groupId>
 		<artifactId>mybatis</artifactId>
 		<version>3.2.3</version>
@@ -25,9 +24,37 @@
 		<artifactId>mysql-connector-java</artifactId>
 		<version>5.1.31</version>
 		</dependency>
-		</dependencies>
+  </dependencies>
   <build>
     <finalName>HelloProject</finalName>
     <defaultGoal>install</defaultGoal>
+    <plugins>
+
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-war-plugin</artifactId>
+<version>2.1.1</version>
+<configuration>
+<warSourceDirectory>src/main/webapp</warSourceDirectory>
+<webXml>src/main/webapp/WEB-INF/web.xml</webXml>
+</configuration>
+</plugin>
+
+<plugin>
+<groupId>org.codehaus.mojo</groupId>
+<artifactId>tomcat-maven-plugin</artifactId>
+<version>1.1</version>
+<configuration>
+<url>http://127.0.0.1/manager/text</url>
+<path>/</path>
+<charset>UTF-8</charset>
+<mode>war</mode>
+<username>admin</username>
+<password>admin</password>
+</configuration>
+</plugin>
+</plugins>
+
+
   </build>
 </project>
